make mapping nullsafe